# UFROCoin_Usuarios_y_Wallets

./: .env.example  .gitignore  Dockerfile  GEMINI.md  README.md  ROLES.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  infra-deploy.yml
docs/adr/: ADR-002.md  ADR_001.md  adr_03.md
src/: __init__.py  main.py
src/api/routes/: auth.py  wallet.py
src/core/: config.py  database.py  rabbitmq_publisher.py  security.py
src/models/: api_response.py  user.py  wallet.py
src/services/: notification_service.py  token_service.py  user_service.py  wallet_service.py
src/utils/: dependencies.py  security.py  wallet.py
test-stack-tecnologico/: README.md  docker-compose.yml
test-stack-tecnologico/backend/: Dockerfile  database.py  main.py  requirements.txt
test-stack-tecnologico/frontend/: Dockerfile  index.html  package.json  vite.config.js
test-stack-tecnologico/frontend/src/: App.vue
tests/: test_auth_openapi.py  test_authentication_and_security.py  test_docker_runtime_config.py  test_e2e.py  test_password_reset.py  test_token_service.py  test_user_registration.py  test_wallet_service.py
