[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ufrocoin-modulo-a"
version = "0.1.0"
description = "Modulo A de UFROCoin: Usuarios y Wallets"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.135.2",
    "uvicorn[standard]==0.34.2",
    "motor==3.7.1",
    "pymongo==4.13.0",
    "pydantic[email]==2.12.0",
    "PyJWT==2.10.1",
    "resend>=2.0.0",
]

[project.optional-dependencies]
test = [
    "httpx>=0.28.1",
    "pytest==8.3.5",
    "pytest-asyncio==1.3.0",
]

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
